atlas/static/css/atlas.css
:root {
    --third-color: #2c410a;
    --map-maille-border-color: #ddd;
    --map-maille-lastobs-border-color: #c218d0;
    --map-territory-border-color: #333;
    --map-area-border-width: 3px;
    --map-area-border-color: var(--second-color);
    --scrollbarBG: #cfd8dc;
    --thumbBG: var(--main-color);
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background-color: #e3e7e8;
}

main {
    margin-top: 3.5rem;
    margin-left: 65px;
    flex: 1;
}

#dropdown09 {
    cursor: pointer;
}



.small-placeholder::placeholder {
    font-size: 13px;
}

.icon-color-title {
    color: var(--icon-color-title);
}


.panel {
    border-radius: 0px !important;
}

.panel-heading {
    background-color: white !important;
}

/* PRESENTATION affix navbar */

.affix {
    top: 60px;
}

/* TITLE WITH border bar */

.title-bar {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

.title-bar::before,
.title-bar::after {
    content: "";
    border-top: 1px solid rgba(2, 2, 2, 0.158);
    width: 3rem;
    margin: 0 1rem;
}

.border {
    border-right: 1px solid rgba(2, 2, 2, 0.158);
}

.center {
    text-align: center;
}

.strong {
    font-weight: bold;
}

#page {
    padding-left: 10px;
    padding-right: 10px;
    flex: 1;
    /*padding-top: 60px;*/
    /*margin-top: 25px;*/
}

.form-control:focus {
    border-color: var(--main-color);
    box-shadow: inset 0 0.5px 0.5px rgba(0, 0, 0, 0.075),
    0 0 5px var(--main-color);
}

.form-inline .form-control {
    width: 150 px;
}

#navbarSupportedContent .form-inline {
    display: flex;
    align-items: center;
    flex-flow: nowrap;
}

#searchTaxons .form-control,
#searchCommunes .form-control {
    width: 100%;
}

@media(min-width: 768px) {
    #navbarSupportedContent {
        position: static;
    }
}

/* carto */

.leaflet-touch .leaflet-bar a:last-child {
    border-bottom-left-radius: 25px;
    border-bottom-right-radius: 25px;
}

.leaflet-touch .leaflet-bar a:first-child {
    border-top-left-radius: 25px;
    border-top-right-radius: 25px;
}

.leaflet-touch .leaflet-control-layers,
.leaflet-touch .leaflet-bar {
    border: transparent;
    background-clip: padding-box;
}

.leaflet-control-layers.leaflet-control.leaflet-control-layers-expanded {
    .nav-tabs {
    margin: 0;
    border-bottom: 1px solid #ddd;
}
.nav-tabs .nav-item {
    margin-bottom: -1px;
}

    .tab-content {
        padding: 10px;

        .leaflet-control-layers-overlays {
            line-height: 1.5rem;

            .leaflet-control-layers-selector {
                margin-right: 0.5rem;
            }
        }
    }
}

#legend-other-info:empty, #legend-area:empty {
    display: none;
}

.leaflet-control-layers-overlays {
    >label {
        >span {
            display: inline-flex;
            align-items: baseline;
        }
    }
}




/* # btn.btn-default n'existe plus en bs5 */
.btn.btn-primary {
    color: white;
    border-color: var(--main-color);
    background-color: var(--main-color) !important;
}

.bg-primary{
    background-color: var(--main-color) !important;
}

.btn.btn-primary:focus,
.btn.btn-primary:hover {
    background-color: white !important;
    color: black;
    border-color: var(--main-color);
}

.btn-outline-secondary {
    color: var(--main-color);
    background-color: white;
    border-color: var(--main-color);
}

.btn-outline-secondary:hover {
    background-color: var(--main-color);
    color: white;
    border-color: var(--main-color);
}

.rowMargin {
    margin-left: 0px;
    margin-right: 0px;
}

.modal {
    top: 40px;
}

/* Navbar */

.navbar {
    background-color: white !important;
    margin-bottom: 0px;
    border-radius: 0px;
    border-bottom: 1px solid var(--main-color);
    z-index: 1999;
    flex-direction: column;
    padding: 0;
    flex-wrap: nowrap;

    .navbar-menu {
        display: flex;
        flex-direction: row;
        height: 60px;
        width: 100%;
        align-items: center;
    }
}

.navbar a.titreAppli {
    white-space: normal; /* surcharge propriété bootstrap */
    /* Si titre trop long tronque le contenu au-delà de 2 lignes */
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;

}

#navbarSupportedContent {
    position: absolute;
    top: 100%;
    right: 0;
}

@media(min-width: 768px) {
    #navbarSupportedContent {
        position: static;
    }
}

.logoStructure {
    height: 60px;
    max-height: 60px;
    padding-right: 15px;
}

.titreAppli {
    font-size: 18px;
    line-height: 30px;
    padding-right: 20px;
}

#searchTaxons,
#searchAreas {
    min-width: 125px;
    width: 16vw;
    max-width: 400px;
}

@media (max-width: 1065px) {
    .ui-autocomplete {
        font-size: .8rem;
    }
}

@media (min-width: 768px) and (max-width: 1065px) {
    #searchTaxons::placeholder,
    #searchAreas::placeholder {
        white-space:pre-line;
        position: relative;
        top: -8px;
        font-size: .7rem;
        color: #666;
    }
    #searchTaxons,
    #searchAreas {
        font-size: .8rem;
    }
}


@media (max-width: 767px) {
    .navbar-collapse {
        padding: 10px;
        background-color: rgba(51, 51, 51, .75);
    }

    .navbar-collapse .fa-search {
        color: white;
    }

    .navbar-toggler {
        margin-right: 15px;
    }

    #searchTaxons,
    #searchAreas {
        width: 35vw;
    }

    main h1 {
        font-size: 1.8rem;
    }

    main h2 {
        font-size: 1.6rem;
    }

    main h3 {
        font-size: 1.4rem;
    }

    main h4 {
        font-size: 1.2rem;
    }

    main h5 {
        font-size: 1rem;
    }

    main {
        font-size: 0.8rem;
    }

    footer {
        font-size: 0.8rem;
    }
}
/* ... */

